<resources>
    <string name="app_name">FickleFlight BE-G2 2024</string>
    <string name="title_explore">Explore</string>
    <string name="title_favorites">Search</string>
    <string name="title_offers">Offers</string>
    <string name="title_person">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Configuration</string>
    <string name="title_notification">Notification</string>
    <string name="title_search">Search</string>
    <string name="title_search_results">Search results</string>
    <string name="title_get_help">Get Help</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_detail">Info Detalle</string>
    <string name="title_intro">Intro</string>
    <string name="preference_category">Generales</string>
    <string name="preference_night_mode">Modo Oscuro</string>
    <string name="preference_night_mode_key">night_mode_preference</string>
    <string name="version">App version 1.0.0</string>
    <string name="mock_api_base_url">https://d9811bf4-5e67-4a8c-bdcf-603cbbfc0275.mock.pstmn.io/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_flight">Flight</string>
    <string name="button_search">Search</string>
    <string name="button_view_details">View Details</string>
    <string name="likeButton">Like Button</string>
    <string name="title_trending_destinations">Trending Destinations</string>
    <string name="see_all_trending_destinations">See all</string>
    <string name="paris">Paris</string>
    <string name="priceParis">$1299</string>
    <string name="fromCardText">FROM</string>
    <string name="limited_time_offer">Limited time offer!</string>
    <string name="from_departures">From</string>
    <string name="select_departure">Select Departure</string>
    <string name="to_arrival">To</string>
    <string name="select_arrival">Select Arrival</string>
    <string name="departure_date">Departure Date</string>
    <string name="select_date">Select Date</string>
    <string name="passengers_title">Passengers</string>
    <string name="class_title">Class</string>
    <string name="search_button">Search</string>
    <string name="limited_offer">LIMITED OFFER!</string>
    <string name="one_way_button">One way</string>
    <string name="round_trip_button">Round trip</string>
    <string name="payment_details">Payment Details</string>
    <string name="referral_code">Referral Code</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="name">Macy Johnson</string>
    <string name="welcome_message">Hello</string>
    <string name="card_detail_overview">Spend 5 days and 4 nights in one of the best islands in the world! Bask in the sun while walking in the white sand beach and enjoy the night partying at the popular seaside bars.</string>
    <string name="result_details_photos">Photos</string>
    <string name="philippines">Philippines</string>
    <string name="_5d4n">5D4N</string>
    <string name="_345">$345</string>
    <string name="overview">Overview</string>
    <string name="book_now">Book now</string>
    <string name="one_way_text">One way</string>
    <string name="round_trip_text">Round trip</string>
    <string name="seleccionar_class_passenger">Seleccionar</string>
    <string name="edit_profile">Edit</string>
    <string name="profile_pais">Baguio, Philippines</string>
    <string name="profile_description">I like the beach, mountains, forest and everything about nature! :)</string>
    <string name="label_new_profile">NEW</string>
</resources>