<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification_icon"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_get_help"
        android:icon="@drawable/get_help_icon"
        android:title="@string/title_get_help" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/calendar_icon"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_preference"
        android:icon="@drawable/settings_icon"
        android:title="@string/title_setting" />

</menu>