<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment_explore">

    <fragment
        android:id="@+id/navigation_search_result"
        android:name="com.example.simulacros.ui.search_result.SearchResultFragment"
        android:label="@string/title_search_results"
        tools:layout="@layout/fragment_search_result">
        <action
            android:id="@+id/action_navigation_search_result_to_navigation_search_result_detail"
            app:destination="@id/navigation_search_result_detail" />
        <argument
            android:name="from"
            app:argType="string" />
        <argument
            android:name="to"
            app:argType="string" />
        <argument
            android:name="date"
            app:argType="string" />
        <argument
            android:name="passengers"
            app:argType="string" />
        <argument
            android:name="classes"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.example.simulacros.ui.offers.OffersFragment"
        android:label="@string/title_offers"
        tools:layout="@layout/fragment_offers" />

    <fragment
        android:id="@+id/navigation_search_result_detail"
        android:name="com.example.simulacros.ui.search_result_detail.SearchResultDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_search_result_detail">
        <argument
            android:name="flight"
            app:argType="com.example.simulacros.domain.model.Flight" />
    </fragment>
    <fragment
        android:id="@+id/navigation_preference"
        android:name="com.example.simulacros.ui.preference.PreferenceFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_preference" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.simulacros.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fragment_explore"
        android:name="com.example.simulacros.ui.explore.FragmentExplore"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore">
        <action
            android:id="@+id/action_fragment_explore_to_fragmentSearch"
            app:destination="@id/fragmentSearch" />
    </fragment>
    <fragment
        android:id="@+id/fragmentSearch"
        android:name="com.example.simulacros.ui.search.FragmentSearch"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_fragmentSearch_to_navigation_home"
            app:destination="@id/navigation_search_result" />
    </fragment>

</navigation>